--- a/lobby.css
+++ b/lobby.css
@@ -51,6 +51,7 @@ html, body{
 .cabecalho .menu-nav div .menu-top-right{
     display: flex;
     list-style: none;
+    margin-right: .8rem;
 }
 
 .cabecalho .menu-nav div .menu-top-right li{
@@ -66,6 +67,7 @@ html, body{
     padding: .5rem;
     cursor: pointer;
     transition: transform .3s;
+    margin-right: .2rem;
 }
 
 .cabecalho .menu-nav div span{
@@ -116,16 +118,16 @@ html, body{
     font-size: 3rem;
     display: flex;
     flex-direction: column;
-    margin-left: 4rem;
+    margin-left: 3rem;
     list-style-type:square;
     gap: .5rem;
 }
 
-.main-content .page-content .menu-left span i{
+.main-content .page-content .menu-left .list-menu i{
     font-size: 3rem;
 }
 
-.main-content .page-content .menu-left span{
+.main-content .page-content .menu-left .list-menu{
     transition: color .1s;
     cursor: pointer;
     transition: all .3s;
@@ -135,30 +137,90 @@ html, body{
     gap:1rem;
 }
 
-.main-content .page-content .menu-left span a{
+.main-content .page-content .menu-left .list-menu a{
     transition: transform .15s;
 }
-.main-content .page-content .menu-left span .first-item{
+.main-content .page-content .menu-left .list-menu .first-item{
     color: var(--cor-primeiro-item-list);
     font-size: 5rem;
 }
 
-.main-content .page-content .menu-left span i{
+.main-content .page-content .menu-left .list-menu i{
     font-size: .5rem;
     color: white;
     transform: rotate(45deg);
     transition: all .2s;
 }
 
-.main-content .page-content .menu-left span:hover a{
+.main-content .page-content .menu-left .list-menu:hover a{
+    color: var(--cor-hover-list);
+    transform: translateX(.8rem);
+}
+
+.main-content .page-content .menu-left .list-menu:hover i{
+    transform: rotate(225deg) scale(1.7);
     color: var(--cor-hover-list);
 }
 
-.main-content .page-content .menu-left span:hover a{
-    transform: translateX(.8rem);
-}   
 
-.main-content .page-content .menu-left span:hover i{
-    transform: rotate(225deg) scale(1.7);
-    color: var(--cor-hover-list);
+.main-content .page-content .menu-right{
+    position: absolute;
+    right: 0;
+    top: 3rem;
+    height: 100%;
+    background-color: #0C141C;
+    border-top: .1rem solid white;
+    cursor: pointer;
+}
+
+.btn-open-menu-right{
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    font-size: 1.2rem;
+    right: 3.5rem;
+    z-index: 2;
+    transition: opacity .1s;
+}
+
+.menu-right:hover .btn-open-menu-right{
+    opacity: 1;
+}
+
+.main-content .page-content .menu-right .list-menu-right{
+    background-color: #2F363C80;
+}
+
+.list-menu-right .number-players{
+    list-style: none;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .8rem;
+    padding: .5rem;
+}
+
+.perfil-icon, .perfil-icon img{
+    width: 2.3rem;
+    height: 2.3rem;
+    object-fit: cover;
+    list-style: none;
+    background-color: #6D6D6D99;
+}
+
+.perfil-icon{
+    width: 2.8rem;
+    height: 2.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.perfil-icon .icon-online-circle{
+    position: absolute;
+    font-size: .5rem;
+    color: #54A3DA;
+    border-radius: 50%;
+    border: 1px solid white;
+    right: 0;
+    margin-top: 1rem;
 }
