--- a/lobby.css
+++ b/lobby.css
@@ -165,12 +165,14 @@ html, body{
 
 .main-content .page-content .menu-right{
     position: absolute;
-    right: 0;
-    top: 3rem;
+    right: -9.8rem;
+    top: 2.9rem;
     height: 100%;
-    background-color: #0C141C;
+    width: 13rem;
+    background-color: #0C141C80;
     border-top: .1rem solid white;
     cursor: pointer;
+    transition: right .3s;
 }
 
 .btn-open-menu-right{
@@ -180,7 +182,7 @@ html, body{
     font-size: 1.2rem;
     right: 3.5rem;
     z-index: 2;
-    transition: opacity .1s;
+    transition: opacity .1s, right .3s;
 }
 
 .menu-right:hover + .btn-open-menu-right{
@@ -189,38 +191,47 @@ html, body{
 
 .main-content .page-content .menu-right .list-menu-right{
     background-color: #2F363C80;
+    list-style: none;
+    font-size: .7rem;
+    font-family:'Verdana', sans-serif;
 }
 
-.list-menu-right .number-players{
-    list-style: none;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: .8rem;
-    padding: .5rem;
-}
-
-.perfil-icon, .perfil-icon img{
-    width: 2.3rem;
-    height: 2.3rem;
-    object-fit: cover;
-    list-style: none;
-    background-color: #6D6D6D99;
+.list-menu-right .block-list{
+    display: flex;
+    align-items: center;
 }
 
 .perfil-icon{
     width: 2.8rem;
-    height: 2.8rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    object-fit: cover;
+    box-sizing: content-box;
+    padding: .3rem;
 }
 
-.perfil-icon .icon-online-circle{
-    position: absolute;
-    font-size: .5rem;
-    color: #54A3DA;
-    border-radius: 50%;
-    border: 1px solid white;
-    right: 0;
-    margin-top: 1rem;
+.perfil-name{
+    font-size: .8rem;
+    font-weight: 500;
 }
+
+.drop-name{
+    margin-left: .2rem;
+    text-transform:uppercase;
+    font-weight: 600;
+}
+
+.drop-number{
+    text-align: center;
+    text-transform: uppercase;
+    width: 2.8rem;
+    padding: .2rem;
+    box-sizing: content-box;
+}
+
+.drop-box{
+    height: 2rem;
+    background-color: #2F363C;
+}
+
+
+
+
