--- a/lobby.css
+++ b/lobby.css
@@ -1,8 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 @font-face {
-    font-family: Tungsten;
-    src: url(fonte.ttf)
+    font-family: 'Tungsten';
+    src: url(fonte.ttf);
+}
+
+@font-face{
+    font-family: 'InriaSans Light';
+    src: url(InriaSans-Light.ttf);
+}
+
+@font-face{
+    font-family: 'InriaSans Regular';
+    src: url(InriaSans-Regular.ttf);
 }
 
 :root{
@@ -51,7 +61,7 @@ html, body{
 .cabecalho .menu-nav div .menu-top-right{
     display: flex;
     list-style: none;
-    margin-right: .8rem;
+    margin-right: .4rem;
 }
 
 .cabecalho .menu-nav div .menu-top-right li{
@@ -108,6 +118,8 @@ html, body{
     position: absolute;
     width: 100%;
     z-index: -1;
+    height: 100%;
+    object-fit: fill;
 }
 
 .main-content .page-content .menu-left{
@@ -192,13 +204,17 @@ html, body{
 .main-content .page-content .menu-right .list-menu-right{
     background-color: #2F363C80;
     list-style: none;
-    font-size: .7rem;
-    font-family:'Verdana', sans-serif;
+    font-size: .8rem;
+    font-family:'InriaSans Regular', sans-serif;
 }
 
-.list-menu-right .block-list{
+.list-menu-right .block-list, .list-menu-right .block-drop{
     display: flex;
     align-items: center;
+}
+
+.list-menu-right .block-list:hover{
+    background-color: rgba(92, 97, 100, 0.565);
 }
 
 .perfil-icon{
@@ -216,7 +232,8 @@ html, body{
 .drop-name{
     margin-left: .2rem;
     text-transform:uppercase;
-    font-weight: 600;
+    font-weight: 300;
+    letter-spacing: 1px;
 }
 
 .drop-number{
@@ -230,6 +247,13 @@ html, body{
 .drop-box{
     height: 2rem;
     background-color: #2F363C;
+}
+
+.drop-arrow{
+    position: absolute;
+    display: flex;
+    right: .7rem;
+    font-size: .9rem;
 }
 
 
