--- a/lobby.css
+++ b/lobby.css
@@ -6,13 +6,13 @@
 }
 
 @font-face{
-    font-family: 'InriaSans Light';
-    src: url(InriaSans-Light.ttf);
+    font-family: 'InriaSans Regular';
+    src: url(InriaSans-Regular.ttf);
 }
 
 @font-face{
-    font-family: 'InriaSans Regular';
-    src: url(InriaSans-Regular.ttf);
+    font-family: 'InriaSans Light';
+    src: url(InriaSans-Light.ttf);
 }
 
 :root{
@@ -20,6 +20,11 @@
     --cor-hover-list: #42FED0;
     --cor-menu-lateral:#0C141C;
     --cor-primeiro-item-list:#FE4554;
+    --online-color:#6DC8B8;
+    --ausente-color:#F0A87B;
+    --em-jogo-color:#54A3DA;
+    --fundo-menu-options:#1F2025;
+    --block-menu-options:#525256;
     font-family: 'Tungsten', sans-serif;
 }
 
@@ -70,7 +75,7 @@ html, body{
     cursor: pointer;
 }
 
-.cabecalho .menu-nav div span i{
+.cabecalho .menu-nav div span .options-btn i{
     margin: 0;
     box-sizing: border-box;
     font-size: 1.3rem;
@@ -185,6 +190,7 @@ html, body{
     border-top: .1rem solid white;
     cursor: pointer;
     transition: right .3s;
+    backdrop-filter: blur(5px);
 }
 
 .btn-open-menu-right{
@@ -211,10 +217,12 @@ html, body{
 .list-menu-right .block-list, .list-menu-right .block-drop{
     display: flex;
     align-items: center;
+    border-top: .125rem solid #00000040;
 }
 
 .list-menu-right .block-list:hover{
-    background-color: rgba(92, 97, 100, 0.565);
+    background-color: #5c616499;
+    border-top: .125rem solid #5c616401;
 }
 
 .perfil-icon{
@@ -227,6 +235,15 @@ html, body{
 .perfil-name{
     font-size: .8rem;
     font-weight: 500;
+}
+
+.perfil-name::before{
+    position: absolute;
+    content: ' \25CF';
+    font-size: 1.3rem;
+    z-index: 5;
+    color: var(--online-color);
+    transform: translateX(-.8rem) translateY(.3rem);
 }
 
 .drop-name{
@@ -254,6 +271,81 @@ html, body{
     display: flex;
     right: .7rem;
     font-size: .9rem;
+}
+
+
+.main-content .section-options{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: #23232390;
+}
+
+.section-options:target{
+    display: flex;
+}
+
+.section-options .menu-options .btn-exit-menu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.5rem;
+    position: absolute;
+    margin-right:-26rem;
+    margin-top: -20.5rem;
+    background-color: #52525680;
+    width: 3rem;
+    height: 3rem;
+}
+
+.section-options .menu-options{
+    font-family: 'InriaSans Light', sans-serif;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--fundo-menu-options);
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+    gap: .2rem;
+    width: 30rem;
+    height: 25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    overflow: hidden;
+}
+
+.menu-options .block-menu-options{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 20rem;
+    height: 3rem;
+    background-color: var(--block-menu-options);
+    border: .18rem solid #7D7D80;
+    padding: 1rem;
+    box-sizing: border-box;
+}
+
+.section-options .menu-options .list-menu-options:nth-child(5){
+    margin-top: 3rem;
+}
+
+.list-menu-options .exit-block{
+    background-color: #C46464;
+    border: .18rem solid #D38A8B;
+}
+
+.version-options p{
+    letter-spacing: 1px;
+    font-size: .6rem;
+    color: #878686;
 }
 
 
