--- a/lobby.css
+++ b/lobby.css
@@ -218,7 +218,35 @@ html, body{
 .list-menu-right .block-list, .list-menu-right .block-drop{
     display: flex;
     align-items: center;
-    border-top: .125rem solid #00000040;
+    border-top: .125rem solid #00000015;
+}
+
+.list-menu-right .block-list .block-text{
+    display: flex;
+    flex-direction: column;
+    margin-left: .7rem;
+    justify-content: center;
+    font-weight: 600;
+}
+
+.block-text span{
+    text-transform: lowercase;
+}
+
+.perfil-activity{
+    font-size: .7rem;
+    text-transform: capitalize;
+}
+
+.conectado{
+    color: #589C91;
+}
+
+.em-jogo{
+    color: #529ACB;
+}
+.ausente{
+    color: #CA926E;
 }
 
 .list-menu-right .block-list:hover{
@@ -236,7 +264,7 @@ html, body{
 .perfil-name{
     font-size: .8rem;
     font-weight: 500;
-    margin-left: .7rem;
+    font-family: 'InriaSans Regular';
 }
 
 .perfil-name::before{
@@ -245,7 +273,7 @@ html, body{
     font-size: 1rem;
     z-index: 5;
     color: var(--online-color);
-    transform: translateX(-1.2rem) translateY(.3rem);
+    transform: translateX(-1.2rem) translateY(.8rem);
     text-shadow: 
              -1px -1px 0px #FFF, 
              -1px 1px 0px #FFF,                    
@@ -488,10 +516,6 @@ html, body{
 .section-panel .highlights:hover, .section-panel .slider:hover, .section-panel .block-panel:hover, .section-panel .block-highlights-mode:hover{
     transform: scale(1.01);
 }
-
-
-
-
 
 
 
